# raytracer

./: CMakeLists.txt
src/: color.hpp  ray.hpp  raytracer.cpp  vec3.hpp
